--- a/overview.html
+++ b/overview.html
@@ -12,7 +12,7 @@
 			}
 			.container{
 				width:450px;
-				
+
 			}
 			table th, table td{
 				border:1px solid black;
@@ -59,11 +59,9 @@
 	<body>
 		<div class="container">
 		<h1>User Agent Switcher</h1>
-		<table id="currentOptions">
-		
-		</table>
+		<table id="currentOptions"><table>
 		<div class="newRow">
-			<div class="row"><label for="domain">Domain Regular Expression</label><input type="text" id="domain" /></div>
+			<div class="row"><label for="domain">Domain (e.g. '*//domain.com/*')</label><input type="text" id="domain" /></div>
 			<div class="row"><label for="userAgent">Associated User Agent</label><input type="text" id="userAgent" /></div>
 			<div class="row"><input type="submit" id="savebtn" value="Insert Row" /<</div>
 		</div>
